[package]
name = "myllm"
version = "0.1.0"
edition = "2024"

[dependencies]
# n-dimensional arrays for tensor operations
ndarray = "0.17.2"

# HTTP client for downloading model files from Hugging Face
reqwest = { version = "0.13.2", features = ["blocking", "rustls"], default-features = false }

# JSON deserialisation (config.json, tokenizer.json)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Safe tensor format used by Hugging Face for model weights
safetensors = "0.7.0"

# Hugging Face fast tokenizer (BPE, WordPiece, etc.)
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }

# Progress bars for download feedback
indicatif = "0.18.4"

# Ergonomic error handling
anyhow = "1.0.102"
