[package]
name = "myllm"
version = "0.1.0"
edition = "2024"

[dependencies]
# n-dimensional arrays for tensor operations
ndarray = "0.17.2"

# HTTP client for downloading model files from Hugging Face
reqwest = { version = "0.13.2", features = ["blocking", "rustls"], default-features = false }

# JSON deserialisation (config.json, tokenizer.json)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ergonomic error handling
anyhow = "1.0.102"

# Pre-tokenizer regex (Unicode \p{L} / \p{N} categories)
regex = "1.12.3"

# NFC Unicode normalisation of the input text
unicode-normalization = "0.1.25"
